ErrorLogt579.txt
t579-noerr.cpp: In function ‘int main()’:
t579-noerr.cpp:142:1: error: a template declaration cannot appear at block scope
 template<class T> void f(std::initializer_list<T>);
 ^
t579-noerr.cpp:143:1: error: expected ‘;’ before ‘f’
 f({1,2,3});
 ^
t579-noerr.cpp:143:10: error: expected primary-expression before ‘)’ token
 f({1,2,3});
          ^
t579-noerr.cpp:143:10: error: expected ‘;’ before ‘)’ token
t579-noerr.cpp:144:13: error: ‘f’ was not declared in this scope
 f({1,"asdf"});
             ^
t579-noerr.cpp:148:1: error: a template declaration cannot appear at block scope
 template<class T> void g(T);
 ^
t579-noerr.cpp:149:1: error: expected ‘;’ before ‘g’
 g({1,2,3});
 ^
t579-noerr.cpp:149:10: error: expected primary-expression before ‘)’ token
 g({1,2,3});
          ^
t579-noerr.cpp:149:10: error: expected ‘;’ before ‘)’ token
t579-noerr.cpp:152:1: error: a template declaration cannot appear at block scope
 template<class T, int N> void h(T const(&)[N]);
 ^
t579-noerr.cpp:153:1: error: expected ‘;’ before ‘h’
 h({1,2,3});
 ^
t579-noerr.cpp:153:10: error: expected primary-expression before ‘)’ token
 h({1,2,3});
          ^
t579-noerr.cpp:153:10: error: expected ‘;’ before ‘)’ token
t579-noerr.cpp:157:1: error: a template declaration cannot appear at block scope
 template<class T> void j(T const(&)[3]);
 ^
t579-noerr.cpp:158:1: error: expected ‘;’ before ‘j’
 j({42});
 ^
t579-noerr.cpp:158:7: error: expected primary-expression before ‘)’ token
 j({42});
       ^
t579-noerr.cpp:158:7: error: expected ‘;’ before ‘)’ token
t579-noerr.cpp:163:1: error: a template declaration cannot appear at block scope
 template<int N> void k(Aggr const(&)[N]);
 ^
t579-noerr.cpp:164:1: error: expected ‘;’ before ‘k’
 k({1,2,3});
 ^
t579-noerr.cpp:164:10: error: expected primary-expression before ‘)’ token
 k({1,2,3});
          ^
t579-noerr.cpp:164:10: error: expected ‘;’ before ‘)’ token
t579-noerr.cpp:165:16: error: ‘k’ was not declared in this scope
 k({{1},{2},{3}});
                ^
t579-noerr.cpp:169:1: error: a template declaration cannot appear at block scope
 template<int M, int N> void m(int const(&)[M][N]);
 ^
t579-noerr.cpp:170:1: error: expected ‘;’ before ‘m’
 m({{1,2},{3,4}});
 ^
t579-noerr.cpp:180:1: error: expected ‘}’ at end of input
 }
